UNOMI-897 Fix issues reported by initial code review